--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
+  - "3.7"
 cache: pip
+dist: xenial
+before_install:
+  - "pip install -U pip"
+  - "python setup.py install"
 install:
   - pip install -r requirements.txt
 script:
