--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - "pip install -U pip"
   - "python setup.py install"
 install:
+  - sudo apt-get install gfortran gcc   
   - pip install -r requirements.txt
 script:
   - pytest
