--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 cache: pip
 dist: xenial
 before_install:
-  - sudo apt-get install gfortran gcc ipython ipython3  
+  - sudo apt-get install gfortran gcc ipython ipython3 cython cython3 libblas libblas3 libblas-dev libblas3-dev liblapack3 liblapack-dev libatlas3-dev  
   - "pip install -U pip"
-  - "pip install 'cython>=0.18' 'assimulo'"  
+  - "pip install 'cython>=0.18' 'assimulo==2.8'"  
   - "python setup.py install"
 install: 
   - pip install -r requirements.txt
