--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ dist: xenial
 before_install:
   - "sudo apt-get install gfortran gcc ipython ipython3 cython cython3 libblas-common libblas3 liblapack3 liblapack-dev"  
   - "pip install -U pip"
-  - "pip install 'cython>=0.18' 'assimulo'"  
+  - "pip install 'cython>=0.18'"  
   - "python setup.py install"
 install: 
   - pip install -r requirements.txt
