--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
+  #Adding conda-forge channel  
+  - conda config --add channels conda-forge     
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy assimulo pygmo>2.7 matplotlib seaborn sympy prettytable pandas pytest mpmath numexpr
   - source activate test-environment
