--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - conda config --add channels conda-forge
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy assimulo pygmo>2.7 matplotlib seaborn sympy==1.3 prettytable pandas pytest mpmath numexpr
-  - pip install thermo
+  - pip install thermo pygraphviz
   - source activate test-environment
   - python setup.py install
 
