--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy assimulo pygmo>2.7 matplotlib seaborn sympy==1.3 prettytable pandas pytest mpmath numexpr numba
   - pip install thermo pygraphviz
+  - pip install pyneqsys
   - source activate test-environment
-  - conda install -c bjodah pyneqsys
   - python setup.py install
 
 script:
